# crossworld

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GPU_TRACER_FIX_SUMMARY.md  GPU_TRACER_LIMITATIONS.md  GPU_TRACER_TESTING.md  HOT-RELOAD-STATUS.md  IMPLEMENTATION_SUMMARY.md  RAYCAST_TEST_FINDINGS.md  RENDERING_DIAGNOSIS.md  button_test.md  check-relays.html  debug-console.md  final_review.md  final_test.md  fix_test.md  flake.nix  generate_materials.py  justfile  linked  moq-innpub.md  obsidian  package.json  project-contents.md  result  review_improvements.md  robo.csm  temp_review_test.md  test-hot-reload.sh  test_button.md  trellis2-notes.md  vox-viewer.html  walkthrough.md
crates/app/: Cargo.toml  README.md
crates/app-bevy/: Cargo.toml
crates/app-bevy/src/: main.rs
crates/app/src/: camera.rs  cli.rs  controller.rs  egui_integration.rs  gilrs_backend.rs  hot_reload.rs  lib.rs  lua_config.rs  main.rs  note_overlay.rs  review_overlay.rs  runner.rs  steel_config.rs
crates/apps/editor/: Cargo.toml  README.md  flake.nix
crates/apps/editor/config/: orbit_test.lua
crates/apps/editor/src/: lib.rs  raycast.rs  ui.rs
crates/assets/: Cargo.toml
crates/assets/src/: main.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: camera.rs  lib.rs
crates/cube/: Cargo.toml  RAYCAST_FIXES.md  README.md
crates/cube/examples/: gpu_shader_gen.rs
crates/cube/src/: axis.rs  cube_wasm.rs  face.rs  face_builder.rs  lib.rs  material.rs  mesh.rs  mesh_builder.rs  neighbor_traversal.rs  octree.rs  parser.rs  raycast.rs  raycast_aether.rs  render.rs  serializer.rs  vox_loader.rs  wasm.rs
crates/cube/src/core/: coord.rs  (+4 more)
crates/cube/tests/: bcf_error_tests.rs  bcf_roundtrip_tests.rs  bcf_tests.rs  mesh_generation_tests.rs  raycast_table_tests.rs  test_models.rs  test_raycast.md  test_raycast_table.md  test_raycast_table.rs
crates/devices/: Cargo.toml
crates/devices/src/: gamepad.rs  gilrs_backend.rs  lib.rs  mouse.rs  sensors.rs  touch.rs
crates/editor/: Cargo.toml  QUICKSTART.md  README.md  flake.nix
crates/editor-bevy/: Cargo.toml  README.md
crates/editor-bevy/src/: camera.rs  config.rs  editing.rs  file_io.rs  main.rs  voxel_scene.rs
crates/editor/config/: cubecoord_debug.lua  test.lua
crates/editor/src/: camera.rs  config.rs  cursor.rs  editing.rs  file_io.rs  file_ops.rs  lib.rs  lua_config.rs  main.rs  mesh_sync.rs  palette.rs  raycast.rs  ui.rs  voxel_scene.rs
crates/game/: Cargo.toml  README.md
crates/game/config/: app.kdl  world.lua
crates/game/src/: config.rs  controller.rs  lib.rs  main.rs
crates/logic/: Cargo.toml
crates/logic/src/: action.rs  condition.rs  cube_adapter.rs  engine.rs  lib.rs  rule.rs  transaction.rs
crates/map/: CLOUD_FREE_DATA.md  Cargo.toml  README.md
crates/map/examples/: cloud_free.rs  elevation_only.rs  free_data.rs  no_api_key.rs  test_stac.rs
crates/map/src/: basemap.rs  coords.rs  elevation.rs  lib.rs  main.rs  osm.rs  satellite.rs  sentinel2.rs
crates/network/: Cargo.toml
crates/network/src/: connection.rs  error.rs  lib.rs  message.rs  transport.rs  webtransport.rs
crates/nostr/: Cargo.toml
crates/nostr/src/: account.rs  connect.rs  events.rs  keys.rs  lib.rs
crates/physics/: Cargo.toml  README.md
crates/physics/benches/: collision.rs
crates/physics/examples/: basic_simulation.rs  character_movement.rs  voxel_collision.rs
crates/physics/src/: character_controller.rs  collider.rs  collision.rs  cube_object.rs  lib.rs  native.rs  object.rs  rigid_body.rs  sdf.rs  wasm.rs  world.rs  world_collider.rs
crates/proto/: Cargo.toml  README.md  config.toml  flake.nix
crates/proto-bevy/: Cargo.toml
crates/proto-bevy/src/: main.rs
crates/proto-gl/: Cargo.toml  README.md  config.toml
crates/proto-gl/src/: app.rs  camera.rs  config.rs  lib.rs  main.rs  models.rs  physics.rs  structures.rs  ui.rs  world.rs
crates/proto/src/: main.rs
crates/renderer/: .gitignore  Cargo.toml  README.md  SETUP.md  TEST_SUMMARY.md  flake.nix  models.ron  run.sh  shell.nix
crates/renderer/examples/: glb_viewer.rs  simple_egui_gl.rs
crates/renderer/src/: bcf_cpu_tracer.rs  bcf_raycast.rs  camera.rs  cpu_tracer.rs  egui_app.rs  gl_tracer.rs  gpu_tracer.rs  lib.rs  main.rs  materials.rs  mesh_renderer.rs  orbit_controller.rs  renderer.rs  shader_utils.rs  thumbnail.rs
crates/renderer/tests/: bcf_cpu_tracer_tests.rs  color_accuracy_tests.rs  color_verification.rs  combined_render_test.rs  debug_coordinate_transform.rs  debug_cube_structure.rs  debug_miss_pattern.rs  debug_render_output.rs  gl_rendering_test.rs  gpu_cpu_comparison_test.rs  gpu_tracer_test.rs  octa_cube_rendering.rs  raycast_test_report.rs  render_validation.rs  test_raycast_direct.rs  test_raycast_positions.rs  texture_data_test.rs  tracer_consistency_tests.rs  tracer_raycast_debug_test.rs  vox_loading_test.rs
crates/robocube/: Cargo.toml  README.md
crates/robocube/server/: pyproject.toml  server.py  setup.sh
crates/robocube/src/: convert.rs  lib.rs  types.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: error.rs  kdl_reader.rs  lua_engine.rs  value.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: broadcast.rs  config.rs  connection.rs  discovery.rs  lib.rs  main.rs  messages.rs  metrics.rs  server.rs
crates/system/: Cargo.toml
crates/system/src/: app.rs  camera.rs  lib.rs
crates/test-client/: Cargo.toml  README.md
crates/test-client/src/: main.rs
crates/testbed/: Cargo.toml
crates/testbed/config/: scene.lua  scene.scm
crates/testbed/src/: lib.rs  lua_scene.rs  main.rs  steel_scene.rs  ui.rs
crates/world/: Cargo.toml
crates/world/src/: emoji_hash.rs  entity.rs  identity.rs  lib.rs  tests.rs
crates/worldtool/: Cargo.toml  README.md
crates/worldtool/src/: main.rs
crates/xcube/: Cargo.toml  README.md
crates/xcube/server/: .gitignore  README.md  pyproject.toml  server.py  setup.sh  test_client.py  train.sh
crates/xcube/src/: client.rs  convert.rs  lib.rs  types.rs
(+571 files in other folders)
