[workspace]
members = ["crates/world", "crates/worldtool", "crates/cube", "crates/assets", "crates/physics", "crates/renderer", "crates/server", "crates/test-client", "crates/editor", "crates/proto-gl", "crates/app", "crates/game", "crates/testbed", "crates/app-bevy"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
