[workspace]
members = ["crates/core", "crates/world", "crates/worldtool", "crates/cube", "crates/assets", "crates/physics", "crates/renderer", "crates/server", "crates/test-client", "crates/editor", "crates/proto-gl", "crates/app", "crates/game", "crates/testbed", "crates/app-bevy", "crates/proto-bevy", "crates/editor-bevy", "crates/nostr", "crates/xcube", "crates/trellis"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
