[package]
name = "app-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy with custom feature set (not using workspace inheritance to disable default features)
bevy = { version = "0.17", default-features = false, features = [
    "dynamic_linking",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "tonemapping_luts",
    "x11",
] }
