[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[features]
default = ["gilrs"]
gilrs = ["dep:gilrs"]

# Runtime feature enables the AppRunner and EguiIntegration
# This brings in system library dependencies (glutin, winit, etc.)
runtime = [
    "dep:glutin",
    "dep:glutin-winit",
    "dep:raw-window-handle",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui_glow",
]

# Steel feature enables configuration via Steel (embedded Scheme)
steel = ["dep:steel-core"]

[dependencies]
glow = "0.14"
winit = "0.30"
glam = "0.29"
gilrs = { version = "0.11", optional = true }

# Optional Steel dependency for configuration
steel-core = { version = "0.7", optional = true }

# Optional runtime dependencies
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }
egui = { version = "0.29", optional = true }
egui-winit = { version = "0.29", optional = true }
egui_glow = { version = "0.29", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }
