[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[features]
default = ["gilrs"]
gilrs = ["dep:gilrs"]

# Runtime feature enables the AppRunner and EguiIntegration
# This brings in system library dependencies (glutin, winit, etc.)
runtime = [
    "dep:glutin",
    "dep:glutin-winit",
    "dep:raw-window-handle",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui_glow",
    "dep:image",
    "dep:libloading",
    "dep:notify",
    "dep:notify-debouncer-mini",
]

[dependencies]
core = { path = "../core" }
glow = "0.16"
winit = "0.30"
glam = "0.30"
gilrs = { version = "0.11", optional = true }
clap = { version = "4", features = ["derive"] }

# Optional runtime dependencies
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }
egui = { version = "0.33", optional = true }
egui-winit = { version = "0.33", optional = true }
egui_glow = { version = "0.33", optional = true }
image = { version = "0.25", optional = true }
libloading = { version = "0.9", optional = true }
notify = { version = "8.2", optional = true }
notify-debouncer-mini = { version = "0.7", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }
