[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[features]
default = ["gilrs"]
gilrs = ["dep:gilrs"]

# Runtime feature enables the AppRunner and EguiIntegration
# This brings in system library dependencies (glutin, winit, etc.)
runtime = [
    "dep:glutin",
    "dep:glutin-winit",
    "dep:raw-window-handle",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui_glow",
    "dep:image",
    "dep:libloading",
    "dep:notify",
    "dep:notify-debouncer-mini",
]

[dependencies]
core.workspace = true
glow.workspace = true
winit.workspace = true
glam.workspace = true
gilrs = { workspace = true, optional = true }
clap.workspace = true

# Optional runtime dependencies
glutin = { workspace = true, optional = true }
glutin-winit = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
egui_glow = { workspace = true, optional = true }
image = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["x11"] }
