[package]
name = "assets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "assets"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dot_vox = "5.1"
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dotenv = "0.15"
