[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = { version = "0.30", features = ["serde"] }
glow = "0.16"
winit = "0.30"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
gilrs = { version = "0.11", optional = true }

[features]
default = []
gilrs = ["dep:gilrs"]
