[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam.workspace = true
glow.workspace = true
winit.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
gilrs = { workspace = true, optional = true }

[features]
default = []
gilrs = ["dep:gilrs"]
