[package]
name = "crossworld-cube"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []
image = ["dep:image"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3.76", features = [
    "console",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# Error handling
thiserror = "2.0"

# Parsing
nom = "7.1"

# Image loading (optional)
image = { version = "0.25", optional = true }

# Math library
glam = { version = "0.29", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
