[package]
name = "crossworld-cube"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []
image = ["dep:image"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2.0"

# Parsing
nom = "7.1"

# Image loading (optional)
image = { version = "0.25", optional = true }

# Math library
glam = { version = "0.29", features = ["serde"] }

# Voxel model loading
dot_vox = "5.1"

# Fix for WASM builds - getrandom is a transitive dependency that needs this feature
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
