[package]
name = "editor-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Native voxel editor for Crossworld using Bevy"
license = "MIT OR Apache-2.0"

[[bin]]
name = "editor-bevy"
path = "src/main.rs"

[dependencies]
# Bevy game engine
bevy = { workspace = true, features = ["dynamic_linking"] }
bevy_egui.workspace = true
bevy_mesh.workspace = true

# Voxel infrastructure
cube.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# File dialogs
rfd.workspace = true

# Math
glam.workspace = true

[dev-dependencies]
