[package]
name = "editor"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Native voxel editor for Crossworld using Bevy"
license = "MIT OR Apache-2.0"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
# Bevy game engine
bevy = "0.17.3"
bevy_egui = "0.38.0"
bevy_mesh = "0.17.3"

# Voxel infrastructure
cube = { path = "../cube" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File dialogs
rfd = "0.15"

# Math
glam = "0.29"

[dev-dependencies]
