[package]
name = "editor"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Native voxel editor for Crossworld using Bevy"
license = "MIT OR Apache-2.0"

[[bin]]
name = "editor"
path = "src/main.rs"

[lib]
name = "editor"
path = "src/lib.rs"

[dependencies]
# Core app framework with runtime support
app = { path = "../app", features = ["runtime"] }

# Rendering and voxel core
renderer = { path = "../renderer" }
cube = { path = "../cube" }

# Core graphics (needed for App trait implementation)
glow = "0.14"
glam = "0.29"
winit = "0.30"
egui = "0.29"
egui_glow = "0.29"

# Native file dialogs
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }

[dev-dependencies]