[package]
name = "editor"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Native voxel editor for Crossworld using glow/egui/winit"
license = "MIT OR Apache-2.0"

[[bin]]
name = "editor"
path = "src/main.rs"

[lib]
name = "editor"
path = "src/lib.rs"

[dependencies]
# Core app framework with runtime support
app = { path = "../app", features = ["runtime"] }

# CLI argument processing
clap = { version = "4", features = ["derive"] }

# Rendering and voxel core
renderer = { path = "../renderer" }
cube = { path = "../cube" }

# Core graphics (needed for App trait implementation)
glow = "0.16"
glam = "0.30"
winit = "0.30"
egui = "0.33"
egui_glow = "0.33"

# Native file dialogs
rfd = "0.15"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"

# Image processing
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }

[dev-dependencies]