[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/main.rs"

[lib]
name = "game"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core app framework with runtime feature for egui integration
app = { path = "../app", features = ["runtime"] }

# Rendering
renderer = { path = "../renderer" }
cube = { path = "../cube" }

# Core graphics (needed for App trait implementation in lib)
glow = "0.14"
glam = "0.29"
winit = "0.30"
egui = "0.29"
egui_glow = "0.29"

# Hot-reload runtime dependencies (only used by binary)
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
libloading = "0.8"
notify = "6.1"
notify-debouncer-mini = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }
