[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/main.rs"

[lib]
name = "game"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core app framework with runtime feature for egui integration
app = { path = "../app", features = ["runtime"] }

# Scripting and configuration
scripting = { path = "../scripting" }

# Rendering
renderer = { path = "../renderer" }
cube = { path = "../cube" }

# World generation
crossworld-world = { path = "../world" }

# Core graphics (needed for App trait implementation in lib)
glow = "0.16"
glam = "0.30"
winit = "0.30"
egui = "0.33"
egui_glow = "0.33"

# Hot-reload runtime dependencies (only used by binary)
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
libloading = "0.9"
notify = "8.2"
notify-debouncer-mini = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["x11"] }
