[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/main.rs"

[lib]
name = "game"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core app framework with runtime feature for egui integration
app = { workspace = true, features = ["runtime"] }

# Scripting and configuration
scripting.workspace = true

# Rendering
renderer.workspace = true
cube.workspace = true

# World generation
crossworld-world.workspace = true

# Core graphics (needed for App trait implementation in lib)
glow.workspace = true
glam.workspace = true
winit.workspace = true
egui.workspace = true
egui_glow.workspace = true

# Hot-reload runtime dependencies (only used by binary)
glutin.workspace = true
glutin-winit.workspace = true
raw-window-handle.workspace = true
libloading.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["x11"] }
