[package]
name = "map"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map-fetcher"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
image = "0.24"
geo = "0.27"
zip = "0.6"
chrono = "0.4"
quick-xml = "0.31"
