[package]
name = "crossworld-nostr"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Nostr integration library for Crossworld"
license = "MIT OR Apache-2.0"

[lib]
name = "crossworld_nostr"
path = "src/lib.rs"

[dependencies]
# Nostr protocol
nostr = "0.44"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
dirs = "6.0"
