[package]
name = "crossworld-nostr"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Nostr integration library for Crossworld"
license = "MIT OR Apache-2.0"

[lib]
name = "crossworld_nostr"
path = "src/lib.rs"

[[bin]]
name = "nostr-login"
path = "src/bin/nostr_login.rs"
required-features = ["nip46"]

[features]
default = []
nip46 = ["nostr-connect", "tokio", "qr2term", "tracing-subscriber"]

[dependencies]
# Nostr protocol
nostr = "0.44"
nostr-connect = { version = "0.44", optional = true }

# Async runtime (for NIP-46)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }

# QR code generation for terminal
qr2term = { version = "0.3", optional = true }

# Logging for NIP-46 debugging
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
thiserror = "2.0"
dirs = "6.0"
