[package]
name = "crossworld-nostr"
version = "0.1.0"
edition = "2021"
authors = ["Crossworld Contributors"]
description = "Nostr integration library for Crossworld"
license = "MIT OR Apache-2.0"

[lib]
name = "crossworld_nostr"
path = "src/lib.rs"

[[bin]]
name = "nostr-login"
path = "src/bin/nostr_login.rs"
required-features = ["nip46"]

[features]
default = []
nip46 = ["nostr-connect", "tokio", "qr2term", "tracing-subscriber"]

[dependencies]
# Nostr protocol
nostr.workspace = true
nostr-connect = { workspace = true, optional = true }

# Async runtime (for NIP-46)
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }

# QR code generation for terminal
qr2term = { workspace = true, optional = true }

# Logging for NIP-46 debugging
tracing-subscriber = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Utilities
thiserror.workspace = true
dirs.workspace = true
