[package]
name = "crossworld-physics"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-sign-ext", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
bevy = []
fabric = []  # Future: SDF collision for fabric-generated cubes

[dependencies]
# Physics engine - use git version for latest features
rapier3d = { git = "https://github.com/dimforge/rapier.git" }

# Voxel model integration
cube = { path = "../cube" }

# Math library (shared with rest of project)
glam = { version = "0.29", features = ["serde"] }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Logging
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "basic_simulation"
required-features = []
