[package]
name = "crossworld-physics"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-sign-ext", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
bevy = []
fabric = []  # Future: SDF collision for fabric-generated cubes

[dependencies]
# Physics engine - use git version for latest features
rapier3d = { git = "https://github.com/dimforge/rapier.git" }

# Voxel model integration
cube.workspace = true

# Math library (shared with rest of project)
glam.workspace = true

# WASM bindings (optional)
wasm-bindgen = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

# Logging
tracing.workspace = true

# App framework (for Object trait) - native only, not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
app.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
tracing-wasm.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
criterion.workspace = true

[[bench]]
name = "collision"
harness = false

[[example]]
name = "basic_simulation"
required-features = []
