[package]
name = "proto-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "dynamic_linking",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "x11",
    "zstd_rust",
] }
bevy_rapier3d = { version = "0.32", features = ["debug-render-3d"] }
clap = { version = "4", features = ["derive"] }
