[package]
name = "proto-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy with custom feature set (not using workspace inheritance to disable default features)
bevy = { version = "0.17", default-features = false, features = [
    "dynamic_linking",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "x11",
    "zstd_rust",
] }
bevy_rapier3d.workspace = true
clap.workspace = true
