[package]
name = "proto-gl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proto-gl"
path = "src/main.rs"

[dependencies]
# GL rendering
glow = "0.16"
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"

# egui integration
egui = "0.33"
egui_glow = "0.33"
egui-winit = "0.33"

# Math and utilities
glam = "0.30"
rand = "0.9"

# Image output
image = "0.25"

# Configuration
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"

# Crossworld crates
cube = { path = "../cube" }
crossworld-physics = { path = "../physics" }
renderer = { path = "../renderer" }
