[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proto"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_gizmos",
    "x11",
    "wayland",
    "multi_threaded",
] }
bevy_rapier3d = "0.28.0"
cube = { path = "../cube" }
crossworld-world = { path = "../world" }
crossworld-physics = { path = "../physics", features = ["bevy"] }
toml = "0.8"
glam = "0.29"
serde = { version = "1.0", features = ["derive"] }
