[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "renderer"
path = "src/lib.rs"

[[bin]]
name = "renderer"
path = "src/main.rs"

[dependencies]
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"
glam = "0.29"
image = "0.25"
egui = "0.29"
egui_glow = "0.29"
egui-winit = "0.29"
cube = { path = "../cube" }
