[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "renderer"
path = "src/lib.rs"

[[bin]]
name = "renderer"
path = "src/main.rs"
# Note: Bin target has module resolution issues. To run tests, temporarily:
# - Rename src/main.rs to src/main.rs.disabled
# - Run: cargo test
# - Restore: mv src/main.rs.disabled src/main.rs

[dependencies]
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"
glam = "0.29"
image = "0.25"
egui = "0.29"
egui_glow = "0.29"
egui-winit = "0.29"
cube = { path = "../cube" }
crossworld-physics = { path = "../physics" }
bytemuck = "1.24.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
