[package]
name = "robocube"
version = "0.1.0"
edition = "2021"
description = "Roblox cube3d text-to-3D to Crossworld voxel format converter"
license = "MIT OR Apache-2.0"
keywords = ["voxel", "roblox", "cube3d", "text-to-3d", "csm"]

[[bin]]
name = "robocube"
path = "src/bin/robocube.rs"

[dependencies]
# Cube crate for octree and CSM serialization
cube.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client (async)
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Math library
glam.workspace = true

# Error handling
thiserror.workspace = true

# CLI parsing
clap.workspace = true

# Progress indication
indicatif.workspace = true

# OBJ file parsing
tobj.workspace = true

[dev-dependencies]
tempfile.workspace = true
