[package]
name = "scripting"
version = "0.1.0"
edition = "2021"
description = "Lua scripting and KDL configuration for Crossworld"

[lib]
name = "scripting"
path = "src/lib.rs"

[dependencies]
# Lua scripting
mlua.workspace = true

# KDL configuration parsing
kdl.workspace = true

# Math types for Lua bindings
glam.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
# Testing
tempfile.workspace = true
