[package]
name = "crossworld-server"
version = "0.1.0"
edition = "2021"
description = "WebTransport-based server for Crossworld voxel worlds"
license = "MIT OR Apache-2.0"

[lib]
name = "crossworld_server"
path = "src/lib.rs"

[[bin]]
name = "crossworld-server"
path = "src/main.rs"

[features]
default = ["runtime"]
runtime = []
webtransport = ["dep:wtransport"]
nostr = ["dep:nostr-sdk"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
cube = { path = "../cube" }
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = { version = "0.6.1", optional = true }
nostr-sdk = { version = "0.37", optional = true }
